--- a/Bikmeans/readme
+++ b/Bikmeans/readme
@@ -1,1 +1,4 @@
-
+接上周kmeans算法
+标准KMeans算法的簇数K是提前给定的，但是实际中K值是非常难以估计的，提出二分K-means算法。
+该算法首先将所有点看作一个簇，然后一分为二， 找到最小sse的聚类中心。接着选择其中一个簇继续一分为二，此处哪一个簇需要根据划分后的SSE值来判断。
+    
